--- a/demo.html
+++ b/demo.html
@@ -1,2 +1,95 @@
-hi my name is  om kumar
-i am intrested in front-end development
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Om portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    *{
+      font-family: proxima nova;
+    }
+    body{
+      background-image: url(image/back.jpg);
+      background-position: absolute;  
+      background-repeat: no-repeat;
+      background-size: 100%; 
+    }
+    .nav-item{
+      padding-left: 10px;
+      padding-right: 10px;
+      font-family: sans-serif;
+    }
+    .nav-link{
+      color: white;
+      font-size: 20px;
+      font-family: proxima nova;
+    }
+    
+  </style>
+</head>
+<body>
+
+<nav class="navbar navbar-expand-md  navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="image/omkumar.jpg" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
+      <span style="font-family: proxima nova; font-weight: 700;">OMKUMAR</span></a>
+
+
+      <button class="btn btn-dark d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+        <span class="navbar-toggler-icon "></span> 
+      </button>
+
+
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Project</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Skills</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<div class="offcanvas offcanvas-start offcanvas-md" id="demo">
+  <div class="offcanvas-header">
+    <h1 class="offcanvas-title">Om Portfilio</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+  </div>
+  <div class="offcanvas-body">
+      <div class="list-group ">
+        <a href="#" class="list-group-item list-group-item-action">Home</a>
+        <a href="#" class="list-group-item list-group-item-action">Project</a>
+        <a href="#" class="list-group-item list-group-item-action">Skills</a>
+        <a href="#" class="list-group-item list-group-item-action">Contact</a>
+        <a href="#" class="list-group-item list-group-item-action">About</a>
+      </div>
+
+   
+  </div>
+</div>
+
+
+
+
+
+
+</body>
+</html>
+
+
